--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "babel-loader": "7.x",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-jss": "^8.6.1"
+    "react-dom": "^16.8.6"
   },
   "repository": {
     "type": "git",
