--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
     "predeploy": "npm run build",
-    "deploy": "npm run predeploy && gh-pages -d dist"
+    "deploy": "npm run predeploy && gh-pages -d dist",
+    "lint": "eslint . --fix --ext .js --ext .jsx"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -16,6 +17,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.13.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
