--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "7.x",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.13.0",
